# job-search-agent

./: .alignment-cache.json  .dockerignore  .env.example  .gitignore  AGENT_HANDOFF.md  BUILD_LOG.md  CHANGELOG.md  Dockerfile  PRD.md  README.md  TRACKER.md  app.py  docs-alignment-report.md  docs-review-2026-04-30.md  main.py  package-lock.json  pyproject.toml  railway.json  set_webhook.sh
.claude/: settings.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
core/: artifacts.py  config.py  contracts.py  db.py  extract_pdfs.py  feedback.py  json_utils.py  llm.py  pipeline_checks.py  report_markdown.py  router.py  telegram_utils.py
docs/: PROJECT_OVERVIEW.md  README.md  RUNBOOK.md  agentic-routing-plan.md  bullet-bank-scoping-plan.md  decisions.md  execution_plan.md  google-oauth-setup.md  setup-and-test.md  troubleshooting-and-debugging.md  webhook-service-instructions.md  webhook-service.md
evals/: ci_gate.py  dataset.py  feedback_report.py  hard.py  logger.py  regression_dataset.py  regression_runner.py  report.py  soft.py
integrations/: calendar.py  drive.py  google_auth.py
interview-prep/: ai-engineer-llm.md  ai-product-builder.md
profile/: bullet_bank.json  old bullet bank  profile.json  skill_index.json
resumes/: master_agentic_ai.tex  master_ai.tex  master_ai_pm.tex  master_founders_office.tex  master_growth.tex  master_martech.tex  master_product.tex  master_technical_pm.tex
scripts/: build_skill_index.py  check_runtime.sh  extract_pdfs.py  install-hooks.sh  pre-commit  restart_webhook.sh
tests/: conftest.py  test_ci_gate.py  (+38 more)
(+70 files in other folders)
