[project]
name = "inbox-agent"
version = "0.1.0"
description = "Multi-agent job application system"
requires-python = ">=3.9"
dependencies = [
    "python-telegram-bot>=21.0",
    "openai>=1.30.0",
    "google-api-python-client>=2.130.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "pytesseract>=0.3.13",
    "Pillow>=10.3.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "agents*", "integrations*", "evals*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
